# cwaysi_mcpdemo

./: .gitignore  Dockerfile  Procfile  README.md
nextjs-playground/: .env.local  README.md  package-lock.json  package.json
nextjs-playground/pages/: index.tsx
nextjs-playground/pages/api/: hello.ts
server/: .env  README.md  app.py  pyproject.toml  requirements.txt  resume.json
